--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@200;400&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Karla', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container{
+  width: 550px;
+  height: 550px;
+  margin: 10px auto;
+  border: 1px solid black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navigation--bar{
+  height: 65px;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  color: white;
+  font-size: 20.7482px;
+  letter-spacing: 1px;
+  background: linear-gradient(150deg, #672280 5.18%, #A626D3 100%);
+}
+
+.navigation--bar div{
+  padding-left: 29px;
+  padding-right: 28px;
+
+}
+
+.content--container{
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  height: 100%;
 }
