--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,8 @@
   width: 550px;
   height: 550px;
   margin: 10px auto;
-  border: 1px solid black;
+  box-shadow: 0 0 10px rgba(255, 122, 255, 0.575);
 }
-
 .navigation--bar{
   height: 65px;
   display: flex;
@@ -27,12 +26,37 @@
 .navigation--bar div{
   padding-left: 29px;
   padding-right: 28px;
-
 }
 
 .content--container{
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
   height: 100%;
+  margin-top: 36px;
+}
+
+button{
+  width: 477px;
+  height: 40px;
+  font-size: 16px;
+  color: #FFFFFF;
+  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+  border-radius: 5px;
+  margin-bottom: 36px;
+  margin-top: 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.input--container{
+  display: flex;
+  justify-content: space-between;
+  width: 477px;
+}
+
+input{
+  width: 230px;
+  height: 35px;
+  border-radius: 5px;
 }
